// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddSomeoneScreen next renders with skip botton correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "opacity": 1,
              "padding": 15,
            }
          }
          testID="skipButton"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textAlign": "center",
                  "textAlignVertical": "center",
                  "textTransform": "uppercase",
                },
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "lineHeight": 20,
                    "textAlignVertical": "center",
                    "textTransform": "none",
                  },
                  undefined,
                ],
              ]
            }
          >
            SKIP
          </Text>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 60,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "flex-start",
            "flex": 4,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/add_someone.png",
          }
        }
        style={
          Object {
            "height": 80,
            "resizeMode": "contain",
            "width": 80,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 24,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 32,
            "paddingVertical": 10,
            "textAlign": "left",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Growing closer to God involves helping others experience Him.

Take a moment and pray. Who do you want to take steps of faith with?
      </Text>
    </View>
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      style={
        Object {
          "bottom": 20,
          "left": 50,
          "position": "absolute",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#3CC8E6",
            "borderRadius": 50,
            "height": 48,
            "justifyContent": "center",
            "opacity": 1,
            "width": 650,
          }
        }
        testID="bottomButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Array [
                undefined,
              ],
            ]
          }
        >
          ADD SOMEONE
        </Text>
      </View>
    </RCTSafeAreaView>
  </View>
</View>
`;

exports[`AddSomeoneScreen next renders without skip botton correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 60,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "flex-start",
            "flex": 4,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/add_someone.png",
          }
        }
        style={
          Object {
            "height": 80,
            "resizeMode": "contain",
            "width": 80,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 24,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 32,
            "paddingVertical": 10,
            "textAlign": "left",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Growing closer to God involves helping others experience Him.

Take a moment and pray. Who do you want to take steps of faith with?
      </Text>
    </View>
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      style={
        Object {
          "bottom": 20,
          "left": 50,
          "position": "absolute",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#3CC8E6",
            "borderRadius": 50,
            "height": 48,
            "justifyContent": "center",
            "opacity": 1,
            "width": 650,
          }
        }
        testID="bottomButton"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Array [
                undefined,
              ],
            ]
          }
        >
          ADD SOMEONE
        </Text>
      </View>
    </RCTSafeAreaView>
  </View>
</View>
`;

exports[`CelebrationScreen next renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#3CC8E6",
      },
      Object {
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <Image
    onLoad={[Function]}
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../src/containers/CelebrationScreen/gifs/ArrowWhite.gif",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": 1334,
        "width": 750,
      }
    }
    testID="gif"
  />
</View>
`;

exports[`SetupPersonScreen next renders with skip botton correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      undefined,
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 2,
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "marginBottom": 30,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontStyle": "normal",
            "fontWeight": "300",
            "lineHeight": 30,
            "maxWidth": 230,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Who would you like to take steps of faith with this week?
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 3,
        "padding": 30,
      }
    }
  >
    <View>
      <Text
        style={
          Object {
            "color": "#3CC8E6",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        First Name or Nickname
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={true}
        blurOnSubmit={false}
        multiline={false}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="First Name"
        placeholderTextColor="white"
        rejectResponderTermination={true}
        returnKeyType="next"
        selectionColor="#005A7F"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "letterSpacing": 0.25,
              "lineHeight": 24,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {},
          ]
        }
        testID="InputFirstName"
        underlineColorAndroid="rgba(0,0,0,0)"
        value=""
      />
    </View>
    <View
      style={
        Object {
          "paddingVertical": 30,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={false}
        blurOnSubmit={true}
        multiline={false}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Last Name (optional)"
        placeholderTextColor="white"
        rejectResponderTermination={true}
        returnKeyType="done"
        selectionColor="#005A7F"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "letterSpacing": 0.25,
              "lineHeight": 24,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {},
          ]
        }
        testID="InputLastName"
        underlineColorAndroid="rgba(0,0,0,0)"
        value=""
      />
    </View>
  </View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 650,
        }
      }
      testID="bottomButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Array [
              undefined,
            ],
          ]
        }
      >
        CONTINUE
      </Text>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`SetupPersonScreen next renders without skip botton correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      undefined,
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 2,
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "marginBottom": 30,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontStyle": "normal",
            "fontWeight": "300",
            "lineHeight": 30,
            "maxWidth": 230,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Who would you like to take steps of faith with this week?
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 3,
        "padding": 30,
      }
    }
  >
    <View>
      <Text
        style={
          Object {
            "color": "#3CC8E6",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        First Name or Nickname
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={true}
        blurOnSubmit={false}
        multiline={false}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="First Name"
        placeholderTextColor="white"
        rejectResponderTermination={true}
        returnKeyType="next"
        selectionColor="#005A7F"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "letterSpacing": 0.25,
              "lineHeight": 24,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {},
          ]
        }
        testID="InputFirstName"
        underlineColorAndroid="rgba(0,0,0,0)"
        value=""
      />
    </View>
    <View
      style={
        Object {
          "paddingVertical": 30,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={false}
        blurOnSubmit={true}
        multiline={false}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Last Name (optional)"
        placeholderTextColor="white"
        rejectResponderTermination={true}
        returnKeyType="done"
        selectionColor="#005A7F"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "letterSpacing": 0.25,
              "lineHeight": 24,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {},
          ]
        }
        testID="InputLastName"
        underlineColorAndroid="rgba(0,0,0,0)"
        value=""
      />
    </View>
  </View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 650,
        }
      }
      testID="bottomButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Array [
              undefined,
            ],
          ]
        }
      >
        CONTINUE
      </Text>
    </View>
  </RCTSafeAreaView>
</View>
`;
